# TradeBrain

./: .env.example  .gitignore  README.md  install.cmd  install.ps1  start.cmd  start.ps1
backend/: pyproject.toml  tradebrain.db-shm  tradebrain.db-wal
backend/app/: __init__.py  main.py
backend/app/adapters/feishu/: __init__.py  client.py
backend/app/adapters/ibkr/: __init__.py  client.py
backend/app/adapters/telegram/: __init__.py  client.py
backend/app/api/: router.py
backend/app/application/: alert_router.py  alert_rule_service.py  event_service.py  ibkr_settings_service.py  notification_settings_service.py  portfolio_history_service.py  scanner_service.py  snapshot_builder.py  snapshot_cache_service.py  snapshot_pipeline_service.py  snapshot_refresh_settings_service.py  state_engine.py  target_portfolio_service.py  watchlist_service.py
backend/app/application/notifications/: service.py  (+1 more)
backend/app/config/: __init__.py  settings.py
backend/app/jobs/: snapshot_refresh_job.py
backend/tests/: conftest.py  test_alert_router.py  test_alert_rules_api.py  test_events_api.py  test_fx_service.py  test_health.py  test_ibkr_client.py  test_ibkr_settings_api.py  test_indicator_service.py  test_notification_settings_api.py  test_notifications.py  test_portfolio_history_api.py  test_settings.py  test_snapshot_api.py  test_snapshot_refresh_settings_api.py  test_state_service.py  test_strategy_scoring_scanner.py  test_target_positions_api.py  test_valuation_service.py  test_watchlist_api.py
backend/tradebrain_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+116 files in other folders)
